# hidpi-widget

./: .gitignore  Cargo.toml  Makefile  README.md
debian/: changelog  control  copyright  libs76-hidpi-widget.install  libs76-hidpi-widget.shlibs
ffi/: Cargo.toml  build.rs  s76_hidpi_widget.h
ffi/src/: lib.rs
src/: lib.rs  main.rs
