[package]
name = "hidpi-widget"
version = "0.1.1"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2018"
license = "GPLv3"
readme = "README.md"


[workspace]
members = [ "ffi", "tools" ]


[dependencies]
cascade = "1"
derive_more = "0.99"
gio = "0.9.0"
glib = "0.10.0"
gtk = { version = "0.9.0", features = ["v3_22"] }
gtk-extras = { git = "https://github.com/pop-os/gtk-extras", rev = "05ce6f06a638dd6a65a2cefa204fc773b9fe2122" }
libhandy = "0.7"
