[package]
name = "ffi"
version = "0.1.0"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "s76_hidpi_widget"
crate-type = [ "cdylib" ]

[dependencies]
glib = "0.9"
gtk-sys = "0.9"
gtk = "0.8.0"
hidpi-widget = { path = "../" }
