[package]
name = "ffi"
version = "0.1.0"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "s76_hidpi_widget"
crate-type = [ "cdylib" ]

[dependencies]
glib = "0.10.0"
gtk-sys = "0.10.0"
gtk = "0.9.0"
hidpi-widget = { path = "../" }
